--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "apps:affected": "./node_modules/.bin/nx affected apps",
+    "build:affected": "./node_modules/.bin/nx affected build",
+    "e2e:affected": "./node_modules/.bin/nx affected e2e",
+    "affected:apps": "./node_modules/.bin/nx affected apps",
+    "affected:build": "./node_modules/.bin/nx affected build",
+    "affected:e2e": "./node_modules/.bin/nx affected e2e",
+    "format": "./node_modules/.bin/nx format write",
+    "format:write": "./node_modules/.bin/nx format write",
+    "format:check": "./node_modules/.bin/nx format check",
+    "nx-migrate": "./node_modules/.bin/nx migrate",
+    "first-client": "ng serve -a=first-client -p=4200",
+    "second-client": "ng serve -a=second-client -p=4201",
+    "third-client": "ng serve -a=third-client -p=4202"
   },
   "private": true,
   "dependencies": {
@@ -21,14 +34,21 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@nrwl/nx": "^0.7.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "@ngrx/store": "4.1.1",
+    "@ngrx/router-store": "4.1.1",
+    "@ngrx/effects": "4.1.1",
+    "@ngrx/store-devtools": "4.1.1",
+    "@angular/cli": "file:.angular_cli165.tgz"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@nrwl/schematics": "^0.7.3",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -43,6 +63,10 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "prettier": "1.10.2",
+    "@angular-devkit/core": "^0.0.29",
+    "@angular-devkit/schematics": "0.0.52",
+    "@schematics/angular": "0.1.17"
   }
 }
